--- a/Discordbot/pyproject.toml
+++ b/Discordbot/pyproject.toml
@@ -3,7 +3,7 @@ name = "discord-voice-bot"
 version = "0.1.0"
 description = "A Discord bot with automatic voice capture, Whisper STT, Ollama LLM, and Kokoro TTS."
 authors = [
-    { name = "Your Name", email = "you@example.com" }
+    { name = " ", email = " " }
 ]
 dependencies = [
     "discord.py>=2.4.0",
